# bevy-economics-game

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/coding_bevy/: SKILL.md
.claude/skills/coding_bevy/references/: app_structure.md  collision.md  ecs_patterns.md  feature_flags.md  input.md  movement.md  rendering.md  states.md  testing.md  ui.md
docs/: ARCHITECTURE.md  handoff.md
src/: email.rs  main.rs  office.rs  overworld.rs  shared.rs  state.rs
